# aug-08month_project5

./: .gitignore  README.md  main.py  pyproject.toml  test_f19123.ipynb
hwa_in/: test_resnet50_cam.ipynb  test_rtx4070_cam.ipynb  train_resnet50_4090.ipynb
jin_sup/: BuildModel.py  Description.md  ModelType.py  SoundVariable.py  file_move_transfer.ipynb  img_preprocess.py  lab_start.ipynb  model_eval.ipynb  sound_to_image_transfer.ipynb  test.ipynb  util_tool.py
jin_sup/data_model/: BuildModel.py  GlobalVariable.py
jin_sup/my_test/: 우울증 테스트.m4a  우울증테스트2.m4a  우울증테스트3.m4a
jin_sup/pre_process/: img_preprocess.py  sound_to_image_transfer.ipynb
jin_sup/runs/convnext_experiment1/: events.out.tfevents.1755820727.BOOK-0BAPPG8PUV.40428.0  events.out.tfevents.1755821481.BOOK-0BAPPG8PUV.5040.0  events.out.tfevents.1755821500.BOOK-0BAPPG8PUV.5040.1  events.out.tfevents.1755821777.BOOK-0BAPPG8PUV.14996.0  events.out.tfevents.1755822596.BOOK-0BAPPG8PUV.31448.0  events.out.tfevents.1755822604.BOOK-0BAPPG8PUV.31448.1  events.out.tfevents.1755822907.BOOK-0BAPPG8PUV.19872.0  events.out.tfevents.1755824097.BOOK-0BAPPG8PUV.9052.0  events.out.tfevents.1755824105.BOOK-0BAPPG8PUV.9052.1  events.out.tfevents.1755825902.BOOK-0BAPPG8PUV.27612.0  events.out.tfevents.1755826081.BOOK-0BAPPG8PUV.27612.1  events.out.tfevents.1755828207.BOOK-0BAPPG8PUV.27612.2  (+7 more)
runs/Aug15_16-38-10_wanted/: events.out.tfevents.1755243490.wanted.272869.4
runs/Aug15_16-50-08_wanted/: events.out.tfevents.1755244208.wanted.272869.5
runs/Aug15_17-59-08_wanted/: events.out.tfevents.1755248348.wanted.286338.0
